# 4op_drum_synth

./: .gitmodules  4op_drum_module  4op_drum_module-cache.lib  4op_drum_module-rescue.lib  4op_drum_module.bak  4op_drum_module.cmp  4op_drum_module.ino  4op_drum_module.kicad_pcb  4op_drum_module.pro  4op_drum_module.sch  4op_drum_module.sln  4op_drum_module.vcxproj  4op_drum_module.vcxproj.filters  4op_drum_module.xml  CustomParts.lib  LTC6904.lib  MCP23S17.cpp  USBMIDIEx.h  UpgradeLog.htm  Yamaha.lib  analog_inputs.cpp  display.cpp  display.h  dx11_main.cpp  encoders.cpp  factory_settings.h  icon_conv  icons.h  imgui.ini  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h  main.cpp  midi_instruments.h  nukedopl3.c  nukedopl3.h  opl3.h  opl3_test.cpp  opn2.h  (+8 more)
ctrlr/: opl3_drum_synth.panel
export/: 4op_drum_module-B.SilkS.dxf  4op_drum_module-F.SilkS.dxf  4op_drum_module-Margin.dxf
firmware/: CMakeLists.txt  MCP23S17.h  USBMIDIEx.cpp  USBMIDIEx.h  analog_inputs.h  config.h  display.cpp  display.h  encoders.h  firmware.ino  opl3.h  opl3_transport.h  params.h  utils.h
firmware/cmake/: configs.cmake
firmware/drivers/stm32_startup/: isr.h  vectors.h
firmware/src/: analog_inputs.cpp  analog_inputs.h  config.h  enum.h  firmware.ino  gpio.h  inputs.cpp  inputs.h  main.cpp  opl3.h  opl3_transport.h  params.h  printf.h  ui.cpp  ui.h  utils.h
hardware/: 4op_drum_module-cache.lib  4op_drum_module.bak  4op_drum_module.kicad_pcb  4op_drum_module.kicad_pcb-bak  4op_drum_module.net  4op_drum_module.sch  4op_drum_module_rev2.kicad_pcb  (+6 more)
(+1 files in other folders)
